k8s-deployments-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: nginx-config
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            memory: "2Gi"
            cpu: "5"
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  labels:
    app: frontend-ui
spec:
  replicas: 10
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
      - name: frontend-ui
        image: chelliryc/arwi-frontend-ui:0.1.3.7
        ports:
        - containerPort: 7777
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grammar-correction
  labels:
    app: grammar-correction
spec:
  replicas: 30
  selector:
    matchLabels:
      app: grammar-correction
  template:
    metadata:
      labels:
        app: grammar-correction
    spec:
      containers:
      - name: grammar-correction
        image: chelliryc/arwi-grammar-correction:0.1.6.2
        ports:
        - containerPort: 9999
        resources:
          limits:
            nvidia.com/gpu: 1
            nvidia.com/gpumem: 6000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: essay-scoring
  labels:
    app: essay-scoring
spec:
  replicas: 30
  selector:
    matchLabels:
      app: essay-scoring
  template:
    metadata:
      labels:
        app: essay-scoring
    spec:
      containers:
      - name: essay-scoring
        image: chelliryc/arwi-essay-scoring:0.1.6.2
        ports:
        - containerPort: 9998
        resources:
          limits:
            nvidia.com/gpu: 1
            nvidia.com/gpumem: 1500

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: chelliryc/arwi-backend:0.1.3
        ports:
        - containerPort: 9997
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: LoadBalancer
  type: LoadBalancer
  loadBalancerIP: 192.168.100.14  # Force MetalLB to use this IP
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-ui-service
spec:
  selector:
    app: frontend-ui
  ports:
  - port: 7777
    targetPort: 7777
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: grammar-correction-service
spec:
  selector:
    app: grammar-correction
  ports:
  - port: 9999
    targetPort: 9999
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: essay-scoring-service
spec:
  selector:
    app: essay-scoring
  ports:
  - port: 9998
    targetPort: 9998
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 9997
    targetPort: 9997
  type: ClusterIP
