k8s-deployments-front-back-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: frontend-ui
  labels:
    app: frontend-ui
spec:
  replicas: 10
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
      - name: frontend-ui
        image: chelliryc/arwi-frontend-ui:0.1.3.10
        ports:
        - containerPort: 7777
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: chelliryc/arwi-backend:0.1.4
        ports:
        - containerPort: 9997
        volumeMounts:
        - name: env-file
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: env-file
        configMap:
          name: backend-env
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-ui-service
spec:
  selector:
    app: frontend-ui
  ports:
  - port: 7777
    targetPort: 7777
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 9997
    targetPort: 9997
  type: ClusterIP
